packages/ai-sdk-integration/src/tests/setup.ts
// Jest setup file for AI SDK integration tests

// Mock console methods to reduce noise in tests
global.console = {
  ...console,
  // Uncomment to ignore specific console methods during tests
  // log: jest.fn(),
  // debug: jest.fn(),
  // info: jest.fn(),
  // warn: jest.fn(),
  // error: jest.fn(),
}

// Set default test timeout for AI operations
jest.setTimeout(30000)
